--- a/Changes
+++ b/Changes
@@ -3,3 +3,4 @@ Revision history for Acme-Anything
 0.01    Date/time
         First version, released on an unsuspecting world.
 
+0.04    Build with Dist::Zilla
